--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "debug": "cross-env NODE_ENV=development  webpack-dev-server --progress --inline --hot  --colors --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --config webpack.config.prod.js --colors --progress && echo '前端程序：编译完成'",
 	  "build:server": "cross-env BABEL_ENV=prodnode BABEL_DISABLE_CACHE=1 babel server -d bin --ignore client && echo '后端程序：编译完成(其实不是后端程序，就是用bable把jsx和es6编译成浏览器能识别的代码)'",
-    "deploy:prod": "pm2 start process.json",
+    "deploy:prod": "cross-env BABEL_ENV=production NODE_ENV=production pm2 start process.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
