--- a/server/package.json
+++ b/server/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "async": "^2.1.4",
     "babel-core": "^6.21.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
-    "body-parser": "~1.15.1",
+    "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "cookie-parser": "^1.4.3",
     "express": "~4.13.4",
     "express-session": "^1.14.2",
     "express-winston": "^2.1.2",
     "formidable": "^1.0.17",
-    "jade": "~1.11.0",
     "moment": "^2.17.1",
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
@@ -32,9 +32,6 @@
     "objectid-to-timestamp": "^1.3.0",
     "serve-favicon": "~2.3.0",
     "sha1": "^1.1.1",
-    "st": "^1.2.0",
-    "supervisor": "^0.11.0",
-    "ueditor": "^1.2.0",
     "winston": "^2.3.0"
   },
   "devDependencies": {
